[package]
name = "api-type-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
openapiv3 = "1.0.1"
serde = "1.0.136"
serde_json = "1.0.78"
thiserror = "1.0.30"
indexmap = "1.8.0"
anyhow = "1.0.53"

[dev-dependencies]
pretty_assertions = "1.0.0"