[package]
name = "oagen"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
openapiv3 = "1.0.1"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
indexmap = "1.8.0"
anyhow = "1.0.54"
structopt = "0.3.26"

[dev-dependencies]
pretty_assertions = "1.0.0"