[package]
name = "oagen"
description = "Generate API client code using OpenAPI specifications"
repository = "https://github.com/jprochazk/oagen"
license = "MIT OR Apache-2.0"
version = "0.0.1"
authors = ["jprochazk"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
openapiv3 = "1.0.1"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
indexmap = "1.8.0"
anyhow = "1.0.54"
structopt = "0.3.26"

[dev-dependencies]
pretty_assertions = "1.0.0"